--- a/config.env
+++ b/config.env
@@ -1,2 +1,3 @@
 PORT=8000
 MONGO_URI="mongodb+srv://mdshanawaz1402:shanu123@cluster0.sdsj54m.mongodb.net/"
+DEPLOY_URL=https://user-management-system-jq2v.onrender.com
